--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ jobs:
         - composer install --no-progress --no-suggest --no-interaction --no-cache
       script:
         - export TRAVIS_PULL_REQUEST TRAVIS_COMMIT_RANGE
-#        - ./dev-tools/php-cs-check.sh
+        - ./dev-tools/php-cs-check.sh
         - composer check:analyse
         - composer check:test
       after_success:
