try to use php cs and remove some libs from apt install

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ cache:
 
 before_script:
   - apt-get update -yqq
-  - apt-get install -yqq git libpq-dev libcurl4-gnutls-dev libicu-dev libvpx-dev libjpeg-dev libpng-dev libxpm-dev zlib1g-dev libfreetype6-dev libxml2-dev libexpat1-dev libbz2-dev libgmp3-dev libldap2-dev unixodbc-dev libsqlite3-dev libaspell-dev libsnmp-dev libpcre3-dev libtidy-dev libonig-dev libzip-dev
+  - apt-get install -yqq git libpq-dev libcurl4-gnutls-dev libicu-dev libvpx-dev libzip-dev
   # Install PHP extensions
   - docker-php-ext-install mbstring opcache
   # Install & enable Xdebug for code coverage reports
@@ -36,7 +36,7 @@ test:
   only:
     - master
   script:
-#    - ./dev-tools/php-cs-check.sh
+    - /bin/bash dev-tools/php-cs-check.sh
     - php composer.phar check:analyse
     - php vendor/bin/phpunit --configuration phpunit.xml.dist --coverage-text --colors=never
-    
+
