--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,31 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
-         bootstrap="vendor/autoload.php"
-         backupGlobals="false"
-         backupStaticAttributes="false"
-         colors="true"
-         verbose="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false">
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd" bootstrap="vendor/autoload.php" backupGlobals="false" backupStaticAttributes="false" colors="true" verbose="true" convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" processIsolation="false" stopOnFailure="false">
+  <coverage>
+    <include>
+      <directory suffix=".php">src/main</directory>
+    </include>
+    <exclude>
+      <file>src/main/BitrixCache.php</file>
+    </exclude>
+    <report>
+      <clover outputFile="build/coverage.xml"/>
+      <html outputDirectory="build/coverage"/>
+    </report>
+  </coverage>
   <testsuites>
     <testsuite name="All Test Suites">
       <directory>src/test</directory>
     </testsuite>
   </testsuites>
-  <filter>
-    <whitelist>
-      <directory suffix=".php">src/main</directory>
-      <exclude>
-        <file>src/main/BitrixCache.php</file>
-      </exclude>
-    </whitelist>
-  </filter>
-  <logging>
-    <log type="coverage-clover" target="build/coverage.xml"/>
-    <log type="coverage-html" target="build/coverage"/>
-  </logging>
+  <logging/>
 </phpunit>
