--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ before_script:
   - docker-php-ext-install mbstring opcache
   # Install & enable Xdebug for code coverage reports
   - pecl install xdebug
-  - docker-php-ext-enable xdebug
+  - docker-php-ext-enable xdebug curl intl gd xml zip bz2 opcache
   # Install and run Composer
   - curl -sS https://getcomposer.org/installer | php
   - php composer.phar install --no-progress --no-suggest --no-interaction --no-cache
